fix datepicker spacing

--- a/app/app/public/css/main.css
+++ b/app/app/public/css/main.css
@@ -242,7 +242,7 @@ tr {
 
 @media only screen and (max-width: 568px) {
   #startdatepicker {
-    margin-right: 25%;
+    margin-right: 20%;
   }
 
   #rButton {
